2007-10-09  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/, ipmi-sel/, ipmi-fru/: Fix corner case.  There is
	no need to open an IPMI connection when the user only wants to
	flush a cache.

	* libfreeipmi/src/ipmi-sdr-record-types.c,
	common/src/ipmi-sdr-cache.h: Fix oem data length bug.  Max length
	of OEM data in a OEM record is 56 bytes (448 bits) not 55 bytes
	(440 bits).

	* common/src/ipmi-sdr-cache-reads.c (_get_oem_data_count): Fix
	potential corner case.

	* common/src/ipmi-sdr-cache-reads.c (_get_oem_data,
	_read_sdr_oem_record): Remove improper cast which can cause
	corruption.

	* common/src/ipmi-sdr-cache.c: Don't use hard coded buffer length
	values, use appropriate macros.

	* common/src/ipmi-sdr-cache.c, common/src/ipmi-sdr-cache.h: Do not
	specify max length as 17 for sensor names and devices names, max
	length is 16 and an extra +1 is used for the string nul character.
	
2007-10-08  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sensor-api.c (_get_threshold_message_list,
	_get_generic_event_message_list, _get_event_message_list): Catch
	strdup/malloc errors appropriately.

	* common/src/ipmi-sensor-api.h common/src/ipmi-sensor-api.c
	(sensor_reading_cleanup): New function.

	* ipmi-sensors/src/ipmi-sensors.c (display_group_sensors,
	display_sensor_list, display_sensors): Appropriately free memory
	after use.

	* common/src/pstdout.c (_pstdout_print): Fix potential vsnprintf
	corner case.
	
2007-10-04  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sdr-cache.c (_fread_record): Fix free corruption
	bug.

	* common/src/ipmi-sdr-cache.h, common/src/ipmi-sdr-cache.c: Add
	SDR_CACHE_CTX_ERR_CACHE_EMPTY error code.

	* common/src/ipmi-sdr-cache.c (sdr_cache_load): Fix possible
	corner case.

	* ipmi-sensors/src/ipmi-sensors.c (display_group_sensors,
	display_sensor_list, display_sensors): Remove unused code.
	
2007-10-02  Albert Chu <chu11@llnl.gov>

	* ipmidetect/src/ipmidetect/ipmidetect.c (_cmdline_parse): Fix bug
	in command line option parsing.
	